--- a/code/Entity/Entity.vcxproj.filters
+++ b/code/Entity/Entity.vcxproj.filters
@@ -26,5 +26,19 @@
     <ClInclude Include="entity_global.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CharacterEntity.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BaseEntity.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="CharacterEntity.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BaseEntity.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
